user list with admin scope api
